Update java_jvm_crash_tools.md